tests/snapshots/scenarios__037_ppr_prec_weighted_seed_precision_impact.snap
---
source: packages/rust/crates/xiuxian-testing/src/scenario.rs
expression: result
---
{
  "scenario_id": "037_ppr_prec_weighted_seed_precision_impact",
  "category": "ppr_precision",
  "status": "no_input",
  "files": []
}
