tests/snapshots/scenarios__039_refresh_incremental_update_and_delete.snap
---
source: packages/rust/crates/xiuxian-testing/src/scenario.rs
expression: result
---
{
  "scenario_id": "039_refresh_incremental_update_and_delete",
  "category": "refresh",
  "status": "validated",
  "files": []
}
