tests/snapshots/scenarios__040_refresh_threshold_modes.snap
---
source: packages/rust/crates/xiuxian-testing/src/scenario.rs
expression: result
---
{
  "scenario_id": "040_refresh_threshold_modes",
  "category": "refresh",
  "status": "validated",
  "files": []
}
