tests/snapshots/scenarios__041_search_filt_link_to_and_linked_by.snap
---
source: packages/rust/crates/xiuxian-testing/src/scenario.rs
expression: result
---
{
  "scenario_id": "041_search_filt_link_to_and_linked_by",
  "category": "search_filters",
  "status": "validated",
  "files": []
}
