tests/snapshots/scenarios__042_search_filt_mentions_orphan_tagless_missing_backlink.snap
---
source: packages/rust/crates/xiuxian-testing/src/scenario.rs
expression: result
---
{
  "scenario_id": "042_search_filt_mentions_orphan_tagless_missing_backlink",
  "category": "search_filters",
  "status": "validated",
  "files": []
}
