tests/snapshots/scenarios__043_search_filt_related_accepts_ppr_options.snap
---
source: packages/rust/crates/xiuxian-testing/src/scenario.rs
description: "Scenario 043_search_filt_related_accepts_ppr_options [search_filters]: related accepts ppr options"
expression: result
info:
  id: 043_search_filt_related_accepts_ppr_options
  name: related accepts ppr options
  category: search_filters
  description: search_filters scenario
  input_type: markdown_tree
  input_paths:
    - input
  expected_output_type: ~
input_file: packages/rust/crates/xiuxian-wendao/tests/scenarios/043_search_filt_related_accepts_ppr_options/scenario.toml
---
{
  "category": "search_filters",
  "files": [],
  "scenario_id": "043_search_filt_related_accepts_ppr_options",
  "status": "validated"
}
