tests/snapshots/scenarios__044_search_filt_related_with_distance.snap
---
source: packages/rust/crates/xiuxian-testing/src/scenario.rs
expression: result
---
{
  "scenario_id": "044_search_filt_related_with_distance",
  "category": "search_filters",
  "status": "validated",
  "files": []
}
