tests/snapshots/scenarios__046_search_strat_exact_strategy.snap
---
source: packages/rust/crates/xiuxian-testing/src/scenario.rs
expression: result
---
{
  "scenario_id": "046_search_strat_exact_strategy",
  "category": "search_match_strategies",
  "status": "validated",
  "files": []
}
