tests/snapshots/scenarios__047_search_strat_parse_path_fuzzy.snap
---
source: packages/rust/crates/xiuxian-testing/src/scenario.rs
expression: result
---
{
  "scenario_id": "047_search_strat_parse_path_fuzzy",
  "category": "search_match_strategies",
  "status": "no_input",
  "files": []
}
